App using Webhooks approach

--- a/dispatcher/src/main/resources/application.properties
+++ b/dispatcher/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8084
 bot.name=Lmu28FileExchangerBot
 bot.token=${local.bot.token}
+bot.uri=${local.bot.uri}
+
+server.ssl.enabled=false
+
 
 
 spring.rabbitmq.host=localhost
