--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
+spring.rabbitmq.queues.text-message-update=text_message_update
+spring.rabbitmq.queues.doc-message-update=doc_message_update
+spring.rabbitmq.queues.photo-message-update=photo_message_update
+spring.rabbitmq.queues.answer-message=answer_message
+spring.rabbitmq.queues.verifying-email=verifying-email
+spring.rabbitmq.queues.verifying-email-answer=verifying-email-answer
 
 
 
