--- a/mail-service/src/main/resources/application.properties
+++ b/mail-service/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.mail.protocol=smtps
 spring.mail.username=send-messages-service@yandex.ru
 spring.mail.password=${local.spring.mail.password}
 
-
+spring.rabbitmq.queues.verifying-email=verifying-email
+spring.rabbitmq.queues.verifying-email-answer=verifying-email-answer
 
 service.activation.uri=http://127.0.0.1:8086/user/activation?id={id}
