--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -16,6 +16,11 @@ spring.rabbitmq.queues.verifying-email=verifying-email
 spring.rabbitmq.queues.verifying-email-answer=verifying-email-answer
 
 
+spring.flyway.baseline-on-migrate = true
+spring.flyway.enabled=true
+#spring.flyway.url = jdbc:postgresql://localhost:5432/bot_microservices_storage
+#spring.flyway.password=${local.datasource.password}
+#spring.flyway.user=postgres
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bot_microservices_storage
 spring.datasource.username=postgres
@@ -23,8 +28,12 @@ spring.datasource.password=${local.datasource.password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+
+
+
 
 
 service.file_info.uri=https://api.telegram.org/bot{token}/getFile?file_id={fileId}
