--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,20 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+
 
     <!-- https://mvnrepository.com/artifact/log4j/log4j -->
     <dependency>
@@ -51,6 +65,12 @@
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
     </dependency>
+
+
+
+
+
+
 
 
 
